--- a/css/about.css
+++ b/css/about.css
@@ -37,27 +37,34 @@ h2{
 }
 
 h3 {
-    font-size: 1.8rem;
+    margin-top: 7vh;
+    margin-left: 18vw;
+    margin-right: 18vw;
+    width: 50%;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.1);
+    font-size: 2rem;
+    /* font-size: clamp(1em, 2em + 1vw, 2em); */
+    display: inline-block;
+    padding: 10px;
+    border-bottom: 1px solid;
+    border-color: #0029ff;
+}
+
+h4 {
+    width: fit-content;
+    padding: 0.4em;
+    border-bottom: 1px solid;
+    border-color: #0029ff;
+    background-color: rgba(0, 0, 0, 0.1);
+    font-size: 1.2rem;
     text-transform: uppercase;
     letter-spacing: 1px;
-    text-align: center;
+    margin-bottom: 1em;
 }
 
-.social-media{
-    margin-top: 1rem;
-    display: flex;
-}
-
-.social-media a{
-    text-decoration: none;
-    color: #f0a328;
-    padding: 1rem 4rem;
-    border: 1px solid #f0a328;
-    min-width: 4rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: .5s ease-in-out;
+ul {
+    list-style-type: square;
 }
 
 a:hover{
@@ -205,6 +212,15 @@ a:hover{
     letter-spacing: 1px;
     text-align: justify;
     color: rgba(1, 1, 19, 0.986);
+}
+
+.resume { 
+    background-color: rgba(0, 0, 0, 0.1);
+    font-size: 1em;
+    display: inline-block;
+    padding: 10px;
+    border-bottom: 1px solid;
+    border-color: #0029ff;
 }
 
 .card-wrapper{
