--- a/css/projects.css
+++ b/css/projects.css
@@ -5,15 +5,16 @@ body{
     padding: 0;
     /*font-family: 'Times New Roman', Times, serif;*/
     font-family: Roboto_Slab, sans-serif;
-    color: #f0a328;
 }
 
 /* HEADER */
 
 .header-container{
     height: 100vh;
-    width: 100vw;
-    background-color: #0029ff;
+    width: 100%;
+    background-image: url('../img/projetos.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,9 +25,14 @@ body{
 }
 
 h1{
-    font-size: 100px;
+    font-size: 50px;
+    color: white;
     text-transform: uppercase;
+    text-shadow: 2px 2px 2px #f0a328;
     letter-spacing: 4px;
+    padding: 10px;
+    /* background-color: rgba(255, 255, 255, .1); */
+    /* border-bottom: 2px solid white; */
 }
 
 h2{
