--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,23 @@ body{
     position: relative;
 }
 
+.header-container{
+    height: 100vh;
+    width: 100%;
+    background-color: #0029ff;
+    background-image: url('../img/background.png');
+    background-repeat: no-repeat;
+    background-position: 85% 50%;
+    background-size: 32rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    box-sizing: border-box;
+    padding: 0 112px;
+    position: relative;
+}
+
 h1{
     font-size: 50px;
     text-transform: uppercase;
