--- a/css/projects.css
+++ b/css/projects.css
@@ -205,20 +205,22 @@ a:hover{
     align-items: center;
     justify-content: center;
     background-color: #0029ff;
-    background-image: url('..//img/projeto3.png');
-    background-position: center;
+    background-image: url('..//img/python.png');
+    background-position: 5px 5px;
     background-size: cover;
     background-repeat: no-repeat;
-    filter: grayscale(0.5);
-    color: #f0a328;
+    /* filter: grayscale(0.5); 
+    color: black;
     cursor: pointer;
-    transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out; */
 }
 
 .card-text{
-    width: 40%;
+    width: 50%;
     letter-spacing: 1px;
-    color: rgb(109, 109, 109);
+    padding: 10px;
+    background-color: rgba(0, 0, 0, .1);
+    border-bottom: 1px solid #f0a328;
 }
 
 
@@ -231,7 +233,7 @@ a:hover{
     position: relative;
 }
 
-.card-wrapper::before{
+/* .card-wrapper::before{
     content: '';
     position: absolute;
     height: 100px;
@@ -241,7 +243,7 @@ a:hover{
     border: 1px solid white;
     opacity: 0;
     transition: 0.5s ease-in-out;
-}
+} */
 
 .card-wrapper h2{
     font-size: 40px;
