--- a/css/projects.css
+++ b/css/projects.css
@@ -196,7 +196,7 @@ a:hover{
     width: 90%;
 }
 
-.card{
+/* .card{
     width: 300px;
     height: 300px;
     border-radius: 100%;
@@ -212,7 +212,53 @@ a:hover{
     /* filter: grayscale(0.5); 
     color: black;
     cursor: pointer;
-    transition: 0.5s ease-in-out; */
+    transition: 0.5s ease-in-out;
+} */
+
+#card-1{
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    margin: 3rem 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0a328;
+    background-image: url('..//img/python.png');
+    background-position: 13px 13px;
+    background-size: 95%;
+    background-repeat: no-repeat;
+}
+
+#card-2{
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    margin: 3rem 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0a328;
+    background-image: url('..//img/paginaweb.svg');
+    background-position: -20px 0;
+    background-size: 110%;
+    background-repeat: no-repeat;
+}
+
+
+#card-3{
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    margin: 3rem 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f0a328;
+    background-image: url('..//img/portfolio.svg');
+    background-position: 5px 5px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .card-text{
